--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
   "name": "shadowsocks-over-websocket",
-  "version": "0.1.8",
+  "version": "1.0.1",
   "description": "A fast tunnel proxy that helps you bypass firewalls",
   "main": "tcprelay.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server.js",
     "local": "node local.js",
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/VincentChanX/shadowsocks-over-websocket.git"
+    "url": "git+https://github.com/Tilak999/Socks5-Websocket.git"
   },
   "keywords": [
     "proxy"
   ],
-  "author": "vincentchan <hci.vincentchan@gmail.com> (https://github.com/VincentChanX)",
+  "original-author": "vincentchan <hci.vincentchan@gmail.com> (https://github.com/VincentChanX)",
+  "modedby-author": "Tilak Sasmal",
   "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/VincentChanX/shadowsocks-over-websocket/issues"
-  },
-  "homepage": "https://github.com/VincentChanX/shadowsocks-over-websocket#readme",
   "dependencies": {
     "bufferutil": "^3.0.0",
     "commander": "^2.9.0",
